debug: delete button to show on todo-container:hover; prevent only whitespace form submissions

--- a/public/style.css
+++ b/public/style.css
@@ -37,7 +37,7 @@ input[type="checkbox"]:checked + .checkbox-label {
 }
 
 .bottomnavbar-container button:hover {
-  color: red;
+  color: blue;
   border-style: solid;
   border-width: 1px;
   border-radius: 10px;
@@ -125,11 +125,12 @@ input[type="checkbox"]:checked + .checkbox-label {
   opacity: 0;
   padding-right: 15px;
   font-size: 0.8em;
+  color: red;
 }
 
-.todo-container button:hover {
+.todo-container button:hover,
+.todo-container:hover button {
   opacity: 1;
-  color: red;
 }
 
 .todo-container input {
